--- a/views/layout/email-template.handlebars
+++ b/views/layout/email-template.handlebars
@@ -131,7 +131,7 @@
                 <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                     <tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <p style="margin: 0;">You just recieved a new notification about your order. {{itemId}}</p>
+                            <p style="margin: 0;">You just recieved a new Coupon. {{coupon}}</p>
                         </td>
                     </tr>
                     <tr>
@@ -141,7 +141,7 @@
                                     <td bgcolor="#ffffff" align="center" style="padding: 20px 30px 60px 30px;">
                                         <table border="0" cellspacing="0" cellpadding="0">
                                             <tr>
-                                                <td align="center" style="border-radius: 3px;" bgcolor="#FFA73B"><a href="#" target="_blank" style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; padding: 15px 25px; border-radius: 2px; border: 1px solid #FFA73B; display: inline-block;">€{{price}}</a></td>
+                                                <td align="center" style="border-radius: 3px;" bgcolor="#FFA73B"><a href="#" target="_blank" style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; padding: 15px 25px; border-radius: 2px; border: 1px solid #FFA73B; display: inline-block;">{{coupon}}</a></td>
                                             </tr>
                                         </table>
                                     </td>
@@ -156,7 +156,7 @@
                     </tr> <!-- COPY -->
                     <tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 20px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <p style="margin: 0;"><a href="{{url}}" target="_blank" style="color: #FFA73B;">{{url}}</a></p>
+                            <p style="margin: 0;"><a href="https://chochopet.myshopify.com/" target="_blank" style="color: #FFA73B;">https://chochopet.myshopify.com/</a></p>
                         </td>
                     </tr>
                     <tr>
@@ -166,7 +166,7 @@
                     </tr>
                     <tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 40px 30px; border-radius: 0px 0px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <p style="margin: 0;">Cheers,<br>Marktplats Team</p>
+                            <p style="margin: 0;">Cheers,<br>ChochoPet Team</p>
                         </td>
                     </tr>
                 </table>
