fixed new email

--- a/views/layout/email-template.handlebars
+++ b/views/layout/email-template.handlebars
@@ -98,6 +98,10 @@
         div[style*="margin: 16px 0;"] {
             margin: 0 !important;
         }
+        .help-center {
+            display:inline-block !important;
+            margin-right: 10px;
+        }
     </style>
 </head>
 
@@ -156,7 +160,7 @@
                     </tr> <!-- COPY -->
                     <tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 20px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <p style="margin: 0;"><a href="https://chochopet.myshopify.com/" target="_blank" style="color: #FFA73B;">https://chochopet.myshopify.com/</a></p>
+                            <p style="margin: 0;"><a href="" target="_blank" style="color: #FFA73B;">https://chochopet.myshopify.com/</a></p>
                         </td>
                     </tr>
                     <tr>
@@ -183,6 +187,17 @@
                     </tr>
                 </table>
             </td>
+        </tr>
+        <tr>
+         <td bgcolor="#f4f4f4" align="center" style="padding: 30px 10px 0px 10px;">
+             <h2 style="font-size: 20px; font-weight: 400; color: #111111; margin: 0;">Help Center</h2>
+              <p class="help-center"><a href="https://chochopet.com/pages/help-center?section=privacy-policy" target="_blank" style="color: #FFA73B;">Privacy Policy</a></p>
+              <p class="help-center"><a href="https://chochopet.com/pages/help-center?section=terms-of-service" target="_blank" style="color: #FFA73B;">Terms Of Service</a></p>
+              <p class="help-center"><a href="https://chochopet.com/pages/help-center?section=refund-policy" target="_blank" style="color: #FFA73B;">Refund Policy</a></p>
+              <p class="help-center"><a href="https://chochopet.com/pages/help-center?section=shipping-policy" target="_blank" style="color: #FFA73B;">Shipping Policy</a></p>
+              <p class="help-center"><a href="https://chochopet.com/pages/help-center?section=contact-us" target="_blank" style="color: #FFA73B;">Contact Us</a></p>
+              <p class="help-center"><a href="https://chochopet.com/pages/help-center?section=faq" target="_blank" style="color: #FFA73B;">Frequently Asked Question</a></p>
+         </td>
         </tr>
         <tr>
             <td bgcolor="#f4f4f4" align="center" style="padding: 0px 10px 0px 10px;">
